# fft3d-fpga

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  CMakeLists.txt  LICENSE  README.md
api/: CMakeLists.txt  main.c
api/include/: aocl_mmd.h
api/include/fftfpga/: fftfpga.h
api/src/: fft1d.c  fft2d.c  fft3d.c  fft3d_svm.c  fftfpga.c  fpga_state.h  helper.c  misc.c  misc.h  opencl_utils.c  opencl_utils.h  svm.c  svm.h
cmake/: extDep.cmake  genKernelTargets.cmake
data/fft3d/bram/: fft3d_bram_128.txt  fft3d_bram_32.txt  fft3d_bram_64.txt
data/pcie/: pcie_128.txt  pcie_32.txt
data/svm/: pac64_2048.txt  pac64_2097152.txt  pac64_262114.txt  pac64_32768.txt  pac64_512.txt
docs/: 1dfft_model.md  3dfft_model.md  README.md  pcie.md  userguide.md
examples/: CMakeLists.txt  fft.cpp  fft1d.c  fft1d_batch.c  fft1d_svm.c  fft2d.c  fft2d_bram_svm.c  fft3d.c  fft3d_bram.c  fft3d_ddr.c  fft3d_ddr_batch.c  fft3d_ddr_svm.c  fft3d_ddr_svm_batch.c  fft3d_svm.c  fft3d_svm_batch.c  fft3d_test.c  helper.cpp  helper.hpp
examples/common/: helper.c  helper.h  verify_fftw.c  verify_fftw.h
kernels/: CMakeLists.txt
kernels/2dTranspose/: transpose.cl
kernels/cmake/: genKernelTargets.cmake
kernels/common/: fft_config.h.in
kernels/fft1d/: CMakeLists.txt  fft1d.cl
kernels/fft2d/: CMakeLists.txt  fft2d_bram.cl  fft2d_bram_opt.cl  fft2d_ddr.cl  fft_8.cl
kernels/fft3d/: CMakeLists.txt  Makefile  README.md  fft3d_bram.cl  fft3d_bram_opt.cl  fft3d_bram_triv.cl  fft3d_ddr.cl  fft3d_ddr_batch.cl  fft3d_ddr_svm.cl  fft3d_ddr_triv.cl
kernels/matrixTranspose/: diagonal_bitrev.cl
raw/pcie/: pcie_256.txt  pcie_64.txt
scripts/: fft3d_ddr.sh
scripts/power_measure/: parse_data_PACD5005.py  power_520N.sh  power_PACD5005.sh
src/fft3d_kernels/: fft3d.cl
src/host/: CMakeLists.txt  Makefile  README.md  main.c
src/host/api/: fft_api.h  fft_fpga.c  fft_fpga.h
src/host/common/: helper.c
src/host/include/: fft_api.h  fftfpga.h  helper.h  opencl_utils.h
src/host/src/: fftfpga.c  helper.c  opencl_utils.c  svm.c
src/kernels/: fft_config.h
src/kernels/common/: fft_config.h  fft_config.h.in
src/kernels/fft1d_kernels/: CMakeLists.txt  fft1d.cl
src/kernels/fft2d_kernels/: CMakeLists.txt  fft2d_bram.cl  fft2d_ddr.cl
src/kernels/fft3d_kernels/: CMakeLists.txt  fft3d.aoco  fft3d.cl  fft3d_bram.cl  fft3d_ddr.cl  fft3d_ddr_triv.cl  fft_8.cl  twid_radix4_8.cl
tests/: CMakeLists.txt  test_fft1d_fpga.cpp  test_fft2d_fpga.cpp  test_fft3d_fpga.cpp  test_fft_fpga.cpp  test_fft_setup.cpp  test_helper.cpp  test_misc.cpp  test_opencl_utils.cpp
